# Music_Feature_Analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED_CNN_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GPU_README.md  GRADING_CHECKLIST.md  LOCAL_TESTING.md  LOCKING.md  MAINTENANCE.md  PROJECT_FILELIST.txt  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROPOSAL.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUBMISSION_CHECKLIST.md  SUMMARY.md  check_audio.py  check_training_status.py  clean_conda.ps1  clean_conda.sh  cli.py  docker-compose.yml  mypy.ini  presentation.Rmd  pyproject.toml  quick_check.py  requirements.txt
.github/: ISSUE_LABELS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
app/: config.py  logging_config.py  main.py  model.py
backend/: .env  SERVICE_LAYER_REFACTOR.md  app.py  app_cnn.py  config.py  requirements.txt  test_api.py
config/: target_genres.json
configs/: baseline_8genres.yaml  multilabel_50genres.yaml
docker/: Dockerfile.backend  Dockerfile.feature-extraction  Dockerfile.model  Dockerfile.training  README.md  docker-compose.yml
docs/: index.md  model_optimization_log.md
environments/: environment-cpu.yml  environment-gpu-cuda11.8.yml  environment.yml
matlab/: fft_validation.m  fft_validation.py  spectral_analysis.m
models/: README.md  __init__.py  audio_augmentation.py  bayesian_optimizer.py  cnn_model.py  genre_classifier.py  model_utils.py  random_forest.py  requirements.txt  sample_model.joblib
notebooks/: 01_EDA.ipynb  01_EDA_baseline.ipynb  (+10 more)
(+63 files in other folders)
